  94.	[bug]		jelte
  	bin/xfrout:  Fixed a problem in xfrout where only 2 or 3 RRs
	were used per DNS message in the xfrout stream.
	(Trac #334, r2931)

  93.	[bug]		jinmei
	lib/datasrc: A DS query could crash the library (and therefore,
	e.g. the authoritative server) if some RR of the same apex name
	is stored in the hot spot cache.  (Trac #307, svn r2923)

  92.	[func]*		jelte
	libdns_python (the python wrappers for libdns++) has been renamed
	to pydnspp (Python DNS++). Programs and libraries that used
	'import libdns_python' now need to use 'import pydnspp'.
	(Trac #314, r2902)

  91.	[func]*		jinmei
	lib/cc: Use const pointers and const member functions for the API
	as much as possible for safer operations.  Basically this does
	change the observable behavior, but some of the API were changed
	in a backward incompatible manner.  This change also involves more
	copies, but at this moment the overhead is deemed acceptable.
	(Trac #310, r2803)

  90.	[build]		jinmei
	(Darwin/Mac OS X specific) Specify DYLD_LIBRARY_PATH for tests and
	experimental run under the source tree.  Without this loadable
	python modules refer to installation paths, which may confuse the
	operation due to version mismatch or even trigger run time errors
	due to missing libraries. (Trac #313, r2782)

  89.	[build]		jinmei
	Generate b10-config.db for tests at build time so that the source
	tree does not have to be writable. (Trac #315, r2776)

  88.   [func]		jelte
	Blocking reads on the msgq command channel now have a timeout
	(defaults to 4 seconds, modifiable as needed by modules).
	Because of this, modules will no longer block indefinitely
	if they are waiting for a message that is not sent for whatever
	reason. (Trac #296, r2761)

  87.   [func]		zhanglikun
	lib/python/isc/notifyout: Add the feature of notify-out, when 
	zone axfr/ixfr finishing, the server will notify its slaves.
	(Trac #289, svn r2737)

  86.   [func]		jerry